reg_subtract change: in C (much faster)

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 #CFLAGS=-Wall -g
 CFLAGS=-Wall -O2
 
-all: ../bin/map2besthit ../bin/distr2chr ../bin/map2sv ../bin/addcols
+all: ../bin/map2besthit ../bin/distr2chr ../bin/map2sv ../bin/addcols ../bin/reg_subtract
 
 clean:
 	rm ../bin/*
@@ -18,3 +18,5 @@ clean:
 ../bin/addcols: addcols.c
 	gcc addcols.c $(CFLAGS) -o ../bin/addcols
 
+../bin/reg_subtract: reg_subtract.c
+	gcc reg_subtract.c $(CFLAGS) -o ../bin/reg_subtract
