--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-Wall -g
 #CFLAGS=-Wall -O2
 
-all: ../bin/map2besthit ../bin/distr2chr ../bin/map2sv ../bin/addcols ../bin/reg_subtract ../bin/reg_join ../bin/covered ../bin/getregions ../bin/reg_annot
+all: ../bin/map2besthit ../bin/distr2chr ../bin/map2sv ../bin/addcols ../bin/reg_subtract ../bin/reg_join ../bin/covered ../bin/getregions ../bin/reg_annot ../bin/var_annot
 
 clean:
 	rm ../bin/*
@@ -33,3 +33,5 @@ clean:
 ../bin/reg_annot: reg_annot.c
 	gcc reg_annot.c $(CFLAGS) -o ../bin/reg_annot
 
+../bin/var_annot: var_annot.c
+	gcc var_annot.c $(CFLAGS) -o ../bin/var_annot
