bcol_make: separate tools_bcol.c, removed bcol_make.old

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,7 @@
 CFLAGS=-Wall -DDEBUG=1 -g -I~/dev/completegnomics/src
 #CFLAGS=-Wall -O2
 TOOLS= tools.c tools.h debug.h khash-dstring.h
+BCOL_TOOLS=tools_bcol.c tools_bcol.h razf.c razf.h
 
 all: ../bin$(ARCH)/map2besthit ../bin$(ARCH)/distr2chr ../bin$(ARCH)/map2sv ../bin$(ARCH)/addcols ../bin$(ARCH)/reg_subtract ../bin$(ARCH)/reg_join ../bin$(ARCH)/covered ../bin$(ARCH)/getregions ../bin$(ARCH)/getregionsbcol ../bin$(ARCH)/reg_annot ../bin$(ARCH)/var_annot ../bin$(ARCH)/groupby ../bin$(ARCH)/multireg ../bin$(ARCH)/bcol_indexfile ../bin$(ARCH)/bcol_make
 
@@ -50,5 +51,5 @@ clean:
 ../bin$(ARCH)/bcol_indexfile: bcol_indexfile.c $(TOOLS)
 	gcc bcol_indexfile.c tools.c $(CFLAGS) -o ../bin$(ARCH)/bcol_indexfile
 
-../bin$(ARCH)/bcol_make: bcol_make.c $(TOOLS)
-	gcc bcol_make.c tools.c $(CFLAGS) -o ../bin$(ARCH)/bcol_make
+../bin$(ARCH)/bcol_make: bcol_make.c $(TOOLS) $(BCOL_TOOLS)
+	gcc bcol_make.c tools.c tools_bcol.c razf.c -lz $(CFLAGS) -o ../bin$(ARCH)/bcol_make
