--- a/configure.in
+++ b/configure.in
@@ -21,7 +21,7 @@ dnl	to configure the system for the local environment.
 # this case) so that we create the export library with the dll.
 #-----------------------------------------------------------------------
 
-AC_INIT([genomecomb], [0.8.6])
+AC_INIT([genomecomb], [0.9.0])
 
 #--------------------------------------------------------------------
 # Call TEA_INIT as the first TEA_ macro to set up initial vars.
@@ -73,7 +73,7 @@ TEA_SETUP_COMPILER
 # and PKG_TCL_SOURCES.
 #-----------------------------------------------------------------------
 
-TEA_ADD_SOURCES([genomecombInit.c genomecomb.c tools.c])
+TEA_ADD_SOURCES([genomecombInit.c genomecomb.c genomecomb_selectindexed.c tools.c])
 TEA_ADD_HEADERS([])
 TEA_ADD_INCLUDES([])
 TEA_ADD_LIBS([])
