--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
 # ARCH should be defined by caller
-CFLAGS=-Wall -DDEBUG=1 -g -I~/dev/completegnomics/src
-#CFLAGS=-Wall -O2
+#CFLAGS=-Wall -DDEBUG=1 -g -I~/dev/completegnomics/src
+CFLAGS=-Wall -O2
 TOOLS= tools.c tools.h debug.h
 HASHTOOLS=hash.h hash.c
 BCOL_TOOLS=tools_bcol.c tools_bcol.h razf.c razf.h
 
-all: ../bin$(ARCH)/map2besthit ../bin$(ARCH)/distr2chr ../bin$(ARCH)/map2sv ../bin$(ARCH)/addcols ../bin$(ARCH)/reg_subtract ../bin$(ARCH)/reg_join ../bin$(ARCH)/covered ../bin$(ARCH)/getregions ../bin$(ARCH)/getregionsbcol ../bin$(ARCH)/reg_annot ../bin$(ARCH)/var_annot ../bin$(ARCH)/groupby ../bin$(ARCH)/multireg ../bin$(ARCH)/bcol_indexfile ../bin$(ARCH)/bcol_indexfile_all ../bin$(ARCH)/bcol_make ../bin$(ARCH)/bcol_annot
+all: ../bin$(ARCH)/map2besthit ../bin$(ARCH)/distr2chr ../bin$(ARCH)/map2sv ../bin$(ARCH)/addcols ../bin$(ARCH)/reg_subtract ../bin$(ARCH)/reg_join ../bin$(ARCH)/covered ../bin$(ARCH)/getregions ../bin$(ARCH)/getregionsbcol ../bin$(ARCH)/reg_annot ../bin$(ARCH)/var_annot ../bin$(ARCH)/groupby ../bin$(ARCH)/multireg ../bin$(ARCH)/bcol_indexfile ../bin$(ARCH)/bcol_indexfile_all ../bin$(ARCH)/bcol_make ../bin$(ARCH)/bcol_annot ../bin$(ARCH)/vcf2tsv
 
 clean:
 	rm -f ../bin$(ARCH)/*
@@ -63,3 +63,6 @@ clean:
 
 ../bin$(ARCH)/test: test.c tools.c
 	gcc test.c tools.c $(CFLAGS) -o ../bin$(ARCH)/test
+
+../bin$(ARCH)/vcf2tsv: vcf2tsv.c $(TOOLS) $(HASHTOOLS)
+	gcc vcf2tsv.c tools.c hash.c $(CFLAGS) -o ../bin$(ARCH)/vcf2tsv
