--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 TOOLS= tools.c tools.h debug.h
 TOOLS_VAR= tools_var.c tools_var.h
 HASHTOOLS=hash.h hash.c
-BCOL_TOOLS=tools_bcol.c tools_bcol.h razf.c razf.h
+BCOL_TOOLS=tools_bcol.c tools_bcol.h razf.c razf.h lz4.c lz4.h lz4tools.c lz4tools.h xxhash.c xxhash.h
 
 all: ../bin$(ARCH)/map2besthit ../bin$(ARCH)/distr2chr ../bin$(ARCH)/map2sv ../bin$(ARCH)/addcols \
      ../bin$(ARCH)/reg_subtract ../bin$(ARCH)/reg_join ../bin$(ARCH)/covered ../bin$(ARCH)/getregions \
@@ -46,7 +46,7 @@ clean:
 	gcc getregionsbcol.c tools.c $(CFLAGS) -o ../bin$(ARCH)/getregionsbcol
 
 ../bin$(ARCH)/getregionsbcol2: getregionsbcol2.c $(TOOLS)
-	gcc getregionsbcol2.c tools.c tools_bcol.c razf.c $(CFLAGS) -o ../bin$(ARCH)/getregionsbcol2 -Wl,-Bstatic -lz -Wl,-Bdynamic
+	gcc getregionsbcol2.c tools.c tools_bcol.c razf.c lz4.c lz4tools.c xxhash.c $(CFLAGS) -o ../bin$(ARCH)/getregionsbcol2 -Wl,-Bstatic -lz -Wl,-Bdynamic
 
 ../bin$(ARCH)/reg_annot: reg_annot.c $(TOOLS)
 	gcc reg_annot.c tools.c $(CFLAGS) -o ../bin$(ARCH)/reg_annot
@@ -67,13 +67,13 @@ clean:
 	gcc bcol_indexfile_all.c tools.c hash.c $(CFLAGS) -o ../bin$(ARCH)/bcol_indexfile_all
 
 ../bin$(ARCH)/bcol_make: bcol_make.c $(TOOLS) $(BCOL_TOOLS) $(HASHTOOLS)
-	gcc bcol_make.c tools.c tools_bcol.c hash.c razf.c $(CFLAGS) -o ../bin$(ARCH)/bcol_make -Wl,-Bstatic -lz -Wl,-Bdynamic
+	gcc bcol_make.c tools.c tools_bcol.c hash.c razf.c lz4.c lz4tools.c xxhash.c $(CFLAGS) -o ../bin$(ARCH)/bcol_make -Wl,-Bstatic -lz -Wl,-Bdynamic
 
 ../bin$(ARCH)/bcol_make_multi: bcol_make_multi.c $(TOOLS) $(BCOL_TOOLS) $(HASHTOOLS)
-	gcc bcol_make_multi.c tools.c tools_bcol.c hash.c razf.c $(CFLAGS) -o ../bin$(ARCH)/bcol_make_multi -Wl,-Bstatic -lz -Wl,-Bdynamic
+	gcc bcol_make_multi.c tools.c tools_bcol.c hash.c razf.c lz4.c lz4tools.c xxhash.c $(CFLAGS) -o ../bin$(ARCH)/bcol_make_multi -Wl,-Bstatic -lz -Wl,-Bdynamic
 
 ../bin$(ARCH)/bcol_annot: bcol_annot.c $(TOOLS) $(BCOL_TOOLS)
-	gcc bcol_annot.c tools.c tools_bcol.c razf.c $(CFLAGS) -o ../bin$(ARCH)/bcol_annot -Wl,-Bstatic -lz -Wl,-Bdynamic
+	gcc bcol_annot.c tools.c tools_bcol.c razf.c lz4.c lz4tools.c xxhash.c $(CFLAGS) -o ../bin$(ARCH)/bcol_annot -Wl,-Bstatic -lz -Wl,-Bdynamic
 
 ../bin$(ARCH)/test: test.c tools.c
 	gcc test.c tools.c $(CFLAGS) -o ../bin$(ARCH)/test
