--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,7 @@ all: ../bin$(ARCH)/map2besthit ../bin$(ARCH)/distr2chr ../bin$(ARCH)/map2sv ../b
      ../bin$(ARCH)/multireg ../bin$(ARCH)/bcol_indexfile ../bin$(ARCH)/bcol_indexfile_all \
      ../bin$(ARCH)/bcol_make ../bin$(ARCH)/bcol_make_multi ../bin$(ARCH)/bcol_annot ../bin$(ARCH)/vcf2tsv ../bin$(ARCH)/reg_select \
      ../bin$(ARCH)/check_sort ../bin$(ARCH)/multi_merge ../bin$(ARCH)/multi_join \
-     ../bin$(ARCH)/multicompar_addvars_simple \
+     ../bin$(ARCH)/multicompar_addvars \
      ../bin$(ARCH)/multidb_join \
      ../bin$(ARCH)/tsv_paste ../bin$(ARCH)/tsv_histo \
      ../bin$(ARCH)/sam_clipamplicons
@@ -98,8 +98,8 @@ clean:
 ../bin$(ARCH)/multi_join: multi_join.c $(TOOLS) $(TOOLS_VAR) $(GZTOOLS)
 	gcc multi_join.c tools.c tools_var.c $(GZTOOLS_C) $(CFLAGS) -o ../bin$(ARCH)/multi_join $(LIBZ)
 
-../bin$(ARCH)/multicompar_addvars_simple: multicompar_addvars_simple.c $(TOOLS) $(GZTOOLS) $(TOOLS_VAR)
-	gcc multicompar_addvars_simple.c tools.c tools_var.c $(GZTOOLS_C) $(CFLAGS) -o ../bin$(ARCH)/multicompar_addvars_simple $(LIBZ)
+../bin$(ARCH)/multicompar_addvars: multicompar_addvars.c $(TOOLS) $(GZTOOLS) $(TOOLS_VAR)
+	gcc multicompar_addvars.c tools.c tools_var.c $(GZTOOLS_C) $(CFLAGS) -o ../bin$(ARCH)/multicompar_addvars $(LIBZ)
 
 ../bin$(ARCH)/multidb_join: multidb_join.c $(TOOLS) $(TOOLS_VAR)
 	gcc multidb_join.c tools.c tools_var.c $(CFLAGS) -o ../bin$(ARCH)/multidb_join
